# kittui

./: .envrc  .gitignore  Cargo.toml  DESIGN.md  README.md  flake.nix
.beads/: issues.jsonl
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0000/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0001/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0002/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0003/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0004/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0005/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0006/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0007/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0008/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0009/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0010/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0011/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0012/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0013/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0014/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0015/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0016/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0017/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0018/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0019/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0020/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0021/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0022/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0023/: summary.md
.cacophony/agent/ms-mac-kittui-kittui-dev-2/summary/0024/: summary.md
.github/workflows/: ci.yml  release.yml
bindings/python/: README.md  pyproject.toml
bindings/python/kittui/: __init__.py  __main__.py
bindings/python/tests/: test_kittui.py
bindings/ts/: README.md  package-lock.json  package.json
bindings/ts/src/: index.d.ts  index.js
bindings/ts/test/: koffi.test.js
crates/kittui/: Cargo.toml
crates/kittui-affordances/: Cargo.toml
crates/kittui-affordances/examples/: control_gallery.rs
crates/kittui-affordances/src/: components.rs  controls.rs  gallery.rs  inline.rs  inline_theme.rs  lib.rs  markdown.rs  palette.rs  panel.rs  table.rs  theme.rs
crates/kittui-cache/: Cargo.toml
crates/kittui-cache/src/: eviction.rs  lib.rs  lock.rs  probe.rs
crates/kittui-cli/: Cargo.toml
crates/kittui-cli/examples/: kittui_wm_demo.rs  kittwm_composite_app.rs  kittwm_semantic_app.rs  ratatui_showcase.rs  showcase.rs
crates/kittui-cli/src/: config.rs  daemon.rs  keymap.rs  lib.rs  main.rs  session.rs  shortcuts.rs  top_bar.rs  update.rs
crates/kittui-cli/tests/: compose_at.rs  compose_batch.rs  delete_command.rs  image_stdin.rs  inline_affordance_commands.rs  inline_animation_commands.rs  integration_smoke.rs  json_channels.rs  kittwm_smoke.rs  kitwm_smoke.rs  panel_command.rs  place_command.rs  proof_matrix.rs  render_command.rs  scene_pipeline.rs  wm_animation_commands.rs
crates/kittui-cli/tests/fixtures/: kittwm_showcase_scene_signature.json
crates/kittui-core/: Cargo.toml
crates/kittui-core/src/: animation.rs  color.rs  geom.rs  hash.rs  lib.rs  node.rs  paint.rs  scene.rs  terminal.rs
crates/kittui-core/tests/: scene_id_stability.rs
crates/kittui-ffi/: Cargo.toml  kittui.h
crates/kittui-ffi/src/: lib.rs
crates/kittui-ffi/tests/: abi_snapshot.rs
crates/kittui-ghostty-vt/: Cargo.toml  build.rs
crates/kittui-ghostty-vt/examples/: headless_preview.rs  headless_timelapse.rs  vt_snapshot.rs
crates/kittui-ghostty-vt/src/: lib.rs
crates/kittui-input/: Cargo.toml
crates/kittui-input/src/: lib.rs
crates/kittui-kitty/: Cargo.toml
crates/kittui-kitty/src/: diacritics.rs  lib.rs
crates/kittui-overlay/: Cargo.toml
crates/kittui-overlay/src/: lib.rs
crates/kittui-quartz/: Cargo.toml
crates/kittui-quartz/src/: lib.rs
crates/kittui-quartz/tests/: round_trip.rs
crates/kittui-render-cpu/: Cargo.toml
crates/kittui-render-cpu/src/: lib.rs  pixmap.rs  png.rs  rasterize.rs
crates/kittui-render-cpu/tests/: golden.rs
crates/kittui-render-cpu/tests/golden/: solid_box_4x2.json  vertical_gradient_6x3.json
crates/kittui-render-gpu/: Cargo.toml
crates/kittui-render-gpu/src/: device.rs  encode.rs  lib.rs  pipelines.rs
crates/kittui-render-gpu/tests/: parity.rs  shader_cache.rs
crates/kittui-tmux/: Cargo.toml
crates/kittui-tmux/examples/: install-hooks.sh
crates/kittui-tmux/src/: compose.rs  lib.rs  main.rs  parse.rs
crates/kittui-watch/: Cargo.toml
crates/kittui-watch/src/: main.rs
crates/kittui-wm/: Cargo.toml
crates/kittui-wm/src/: accessibility.rs  dirty.rs  lib.rs  native.rs  semantic.rs
crates/kittui-xvfb/: Cargo.toml
crates/kittui-xvfb/src/: lib.rs
crates/kittui-xvfb/tests/: xquartz_round_trip.rs  xvfb_round_trip.rs
crates/kittui/src/: composition.rs  lib.rs  scene.rs
crates/kittwm-sdk/: Cargo.toml
crates/kittwm-sdk/src/: lib.rs
crates/ratakittui/: Cargo.toml
crates/ratakittui/src/: chrome.rs  join.rs  lib.rs  lifecycle.rs  widgets.rs
docs/: README.md  adaptive-graphics-transport.md  inline-animation.md  kittwm-accessibility-semantic-adapter.md  kittwm-browser-semantic-adapter.md  kittwm-dirty-frame-updates.md  kittwm-evidence.md  kittwm-sdk-plan.md  kittwm-semantic-quickstart.md  kittwm-semantic-surfaces.md  kittwm-strict-clippy.md  kitty-response-probing.md  protocol-conformance.md  wm.md
docs/examples/: kittui-inline-script-ui-showcase.sh  kittui-md-proof.md
docs/wm/: libghostty-vt.md  user-facing-analysis-2026-05-29.md  v2-epic-status.md
scripts/: kittwm-evidence-gate.py  kittwm-ghostty-harness.sh  kittwm-ghostty-spec-smoke.sh  kittwm-strict-clippy.sh
(+652 files in other folders)
