[workspace]
resolver = "2"
members = [
  "crates/kittui-core",
  "crates/kittui-render-cpu",
  "crates/kittui-render-gpu",
  "crates/kittui-kitty",
  "crates/kittui-cache",
  "crates/kittui",
  "crates/kittui-cli",
  "crates/kittui-ffi",
  "crates/ratakittui",
  "crates/kittui-tmux",
  "crates/kittui-affordances",
  "crates/kittui-wm",
  "crates/kittui-overlay",
  "crates/kittui-watch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harryaskham/kittui"
authors = ["Harry Askham <harryaskham@users.noreply.github.com>"]

[workspace.dependencies]
kittui-core = { path = "crates/kittui-core", version = "0.1.0" }
kittui-render-cpu = { path = "crates/kittui-render-cpu", version = "0.1.0" }
kittui-render-gpu = { path = "crates/kittui-render-gpu", version = "0.1.0" }
kittui-kitty = { path = "crates/kittui-kitty", version = "0.1.0" }
kittui-cache = { path = "crates/kittui-cache", version = "0.1.0" }
kittui = { path = "crates/kittui", version = "0.1.0" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
flate2 = "1"
crc32fast = "1"
base64 = "0.22"
once_cell = "1"
parking_lot = "0.12"
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
