[workspace]
resolver = "2"
members = [
  "crates/kittui-core",
  "crates/kittui-render-cpu",
  "crates/kittui-render-gpu",
  "crates/kittui-kitty",
  "crates/kittui-cache",
  "crates/kittui",
  "crates/kittui-cli",
  "crates/kittwm-sdk",
  "crates/kittui-ffi",
  "crates/ratakittui",
  "crates/kittui-tmux",
  "crates/kittui-affordances",
  "crates/kittui-wm",
  "crates/kittui-overlay",
  "crates/kittui-watch",
  "crates/kittui-input",
  "crates/kittui-xvfb",
  "crates/kittui-quartz",
  "crates/kittui-ghostty-vt",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harryaskham/kittui"
authors = ["Harry Askham <harryaskham@users.noreply.github.com>"]

[workspace.dependencies]
kittui-core = { path = "crates/kittui-core", version = "0.1.2" }
kittui-render-cpu = { path = "crates/kittui-render-cpu", version = "0.1.2" }
kittui-render-gpu = { path = "crates/kittui-render-gpu", version = "0.1.2" }
kittui-kitty = { path = "crates/kittui-kitty", version = "0.1.2" }
kittui-cache = { path = "crates/kittui-cache", version = "0.1.2" }
kittui = { path = "crates/kittui", version = "0.1.2" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
flate2 = "1"
crc32fast = "1"
base64 = "0.22"
once_cell = "1"
parking_lot = "0.12"
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
pulldown-cmark = "0.12"
mcp-cli = { git = "https://github.com/harryaskham/mcp-cli", branch = "main" }
updatable-cli = { git = "https://github.com/harryaskham/updatable-cli", branch = "main" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
