[package]
name = "kittui-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed cache for kittui scenes and image inputs."

[dependencies]
kittui-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
