[package]
name = "kittui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "kittui command-line interface."

[[bin]]
name = "kittui"
path = "src/main.rs"

[dependencies]
kittui = { workspace = true }
kittui-core = { workspace = true }
kittui-cache = { workspace = true }
kittui-kitty = { workspace = true }
kittui-render-cpu = { workspace = true }
kittui-input = { path = "../kittui-input", version = "0.1.0" }
kittui-xvfb = { path = "../kittui-xvfb", version = "0.1.0" }
kittui-wm = { path = "../kittui-wm", version = "0.1.0" }
kittui-quartz = { path = "../kittui-quartz", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
ratatui = { workspace = true }
ratakittui = { path = "../ratakittui", version = "0.1.0" }
libc = "0.2"

[features]
default = []
xvfb = ["kittui-xvfb/xvfb"]
quartz = ["kittui-quartz/quartz"]
sck = ["quartz", "kittui-quartz/sck"]
