[package]
name = "kittui-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "kittui command-line interface."

[[bin]]
name = "kittui"
path = "src/main.rs"

[[bin]]
name = "kittwm"
path = "src/bin/kittwm.rs"

[[bin]]
name = "kittwm-browser"
path = "src/bin/kittwm_browser.rs"

[[bin]]
name = "kittwm-terminal"
path = "src/bin/kittwm_terminal.rs"

[[bin]]
name = "kittwm-launch"
path = "src/bin/kittwm_launch.rs"

[[bin]]
name = "kittwm-bar"
path = "src/bin/kittwm_bar.rs"

[[bin]]
name = "kittui-md"
path = "src/bin/kittui_md.rs"

[lib]
name = "kittui_cli"
path = "src/lib.rs"

[dependencies]
kittui = { workspace = true }
kittui-core = { workspace = true }
kittui-cache = { workspace = true }
kittui-kitty = { workspace = true }
kittui-render-cpu = { workspace = true }
kittui-input = { path = "../kittui-input", version = "0.1.0" }
kittui-xvfb = { path = "../kittui-xvfb", version = "0.1.0" }
kittui-wm = { path = "../kittui-wm", version = "0.1.0" }
kittui-ghostty-vt = { path = "../kittui-ghostty-vt", version = "0.1.0" }
kittwm-sdk = { path = "../kittwm-sdk", version = "0.1.0" }
kittui-quartz = { path = "../kittui-quartz", version = "0.1.0" }
kittui-affordances = { path = "../kittui-affordances", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
serde_yaml = "0.9"
ratatui = { workspace = true }
ratakittui = { path = "../ratakittui", version = "0.1.0" }
libc = "0.2"
mcp-cli = { workspace = true }
updatable-cli = { workspace = true }

[features]
# Daily-driver kittwm builds include the native capture backends by default:
# - macOS uses `sck` (which includes Quartz/CoreGraphics)
# - Linux uses `xvfb`
# The runtime still gates platform-specific code with `cfg(target_os = ...)`, so
# doctor reports only the backend that is effective for the current OS.
default = ["sck", "xvfb"]
xvfb = ["kittui-xvfb/xvfb"]
xquartz = ["kittui-xvfb/xquartz"]
quartz = ["kittui-quartz/quartz"]
sck = ["quartz", "kittui-quartz/sck"]
