[package]
name = "kittui-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI for kittui (cdylib + staticlib)."

[lib]
name = "kittui_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
kittui = { workspace = true }
kittui-core = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
