[package]
name = "kittui-ghostty-vt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
kittui-core = { workspace = true }
font8x8 = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.8"

[build-dependencies]
pkg-config = "0.3"
