[package]
name = "kittui-render-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference CPU renderer for kittui scenes."

[dependencies]
kittui-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
flate2 = { workspace = true }
crc32fast = { workspace = true }
rayon = { workspace = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }

[features]
default = ["image-decoders"]
image-decoders = ["dep:image"]

[dev-dependencies]
serde_json = { workspace = true }
